--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -45,9 +45,9 @@
        <% if user_signed_in? %>
          <h1 class="text-white">PromoAppへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
-        <a class="lead text-white">さあ、はじめましょう</a>
+        <a class="lead text-white">さあ、投稿しましょう</a>
          <p>
-          <% link_to "新規登録", new_user_registration_path, class:"btn btn-primary my-2" %>
+          
         </p>
        <% else %>
         <h1 class="text-white">PromoAppへようこそ</h1>
