--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -39,3 +39,16 @@
   display: flex;
   justify-content: space-between;
 }
+
+.input-default{
+  height: 30px;
+  width: 400px;
+}
+.input-name{
+  height: 30px;
+  width: 200px;
+}
+
+.select-birth{
+  height: 30px;
+}
