商品投稿機能の実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,14 +46,14 @@
          <h1 class="text-white">PromoAppへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
         <a class="lead text-white">さあ、投稿しましょう</a>
-         <p>
-          
+         <p class="post-btn">
+          <%= link_to "投稿する", new_post_path, class:"btn btn-success" %>
         </p>
        <% else %>
         <h1 class="text-white">PromoAppへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
         <a class="lead text-white">さあ、はじめましょう</a>
-        <p>
+        <p class="post-btn">
           <%= link_to "新規登録", new_user_registration_path, class:"btn btn-primary my-2" %>
         </p>
        <% end %>
@@ -239,10 +239,7 @@
   </div>
 </div>
 
-
-
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-      
   </body>
 </html>
