--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -9,3 +9,26 @@
 .post-btn{
   padding-top: 50px;
 }
+
+.item-img{
+  width: 100%;
+  height: 225px;
+}
+
+.card-body{
+  height: 150px;
+}
+.card-text{
+  height: 70px;
+}
+
+.post-list{
+  padding: 0 0 30px 180px;
+  
+}
+.store-lists{
+  padding: 50px 0 30px 0 ;
+}
+.store-list{
+  width: 100%;
+}
