--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,39 +42,28 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-       <% if user_signed_in? %>
-         <h1 class="text-white">PromoAppへようこそ</h1>
-        <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
-        <a class="lead text-white">さあ、投稿しましょう</a>
-         <p class="post-btn">
-          <%= link_to "投稿する", new_post_path, class:"btn btn-success" %>
-        </p>
-       <% else %>
-        <h1 class="text-white">PromoAppへようこそ</h1>
-        <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
-        <a class="lead text-white">さあ、はじめましょう</a>
-        <p class="post-btn">
-          <%= link_to "新規登録", new_user_registration_path, class:"btn btn-primary my-2" %>
-        </p>
-       <% end %>
+       
+         <h1 class="text-white">商品詳細ページ</h1>
+        <div class="text-space">
+        <a class="lead text-white">気になることがあればコメントをしましょう</a>
+        </div>
       </div>
     </div>
   </section>
   </div>
+  <div class="post-content">
   <div class="album py-5 bg-light">
-    <h3 class="post-list">投稿一覧</h3>
+    <h3 class="post-list">商品詳細</h3>
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <% @posts.each do |post| %>
+        
         <div class="col">
           <div class="card shadow-sm">
-            <%= link_to post_path(post.id) do %>
             <div>
-            <%= image_tag post.image, class: "item-img" %>
+            <%= image_tag @post.image, class: "item-img" %>
             </div>
-            <% end %>
             <div class="card-body">
-              <p class="card-text"><%= post.text %></p>
+              <p class="card-text"><%= @post.text %></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -85,33 +74,9 @@
             </div>
           </div>
         </div>
-        <% end %>
      </div>
-
-       <h3 class="store-lists">店舗一覧</h3>
-       <div class="store-list">
-         <% @users.each do |user| %>
-         <% if user.store_name.present? %>
-         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-             <strong class="d-inline-block mb-2 text-primary"><%= user.business.name %></strong>
-             <h3 class="mb-0"><%= user.store_name %></h3>
-             <div class="mb-1 text-muted"><%= user.prefecture.name %></div>
-             <p><%= user.area %></p>
-             <p><%= user.store_appeal %></p>
-             <a href="#" class="stretched-link">Continue reading</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-            <div>
-            <%= image_tag user.image.variant(resize: '400x300'), class: "user-img" %>
-            </div>
-
-            </div>
-         </div>
-         <% end %>
-         <% end %>
-       </div>
    </div>
+  </div>
 
 </main>
 
