--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -74,7 +74,8 @@
             </div>
             <% end %>
             <div class="card-body">
-              <p class="card-text"><%= post.text %></p>
+              <p class="card-title"><%= post.title %></p>
+              <p class="card-text"><%= truncate(post.text,length:39) %></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
