--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -47,7 +47,7 @@
      </h3>
    </div>
 
-   <%#= render  'shared/error_messages', model: f.object %>
+   <%= render  'share/error_messages', model: f.object %>
   
    <div class="form-group">
       <div class='form-text-wrap'>
