--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -54,14 +54,14 @@
         <label class="form-text">タイトル</label>
         <span class="indispensable">(必須)</span>
       </div>
-      <%= f.text_area :title, class:"input-default", id:"title", placeholder:"例) 電動ドライバー", maxlength:"40" %>
+      <%= f.text_area :title, class:"input-default", id:"title", placeholder:"例) ドライバー", maxlength:"40" %>
    </div>
    <div class="form-group">
        <div class='form-text-wrap'>
           <label class="form-text">説明</label>
           <span class="indispensable">(必須)</span>
         </div>
-        <%= f.text_area :text, class:"input-default", id:"text", placeholder:"例) 投稿の説明文", maxlength:"40" %>
+        <%= f.text_area :text, class:"input-default-text", id:"text", placeholder:"例) 投稿の説明文" %>
     </div>
 
     <div class="form-group">
