--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,7 +58,7 @@
      </h3>
    </div>
 
-  <%#= render  'shared/error_messages', model: f.object %>
+  <%= render  'share/error_messages', model: f.object %>
   
    <div class="form-group">
      <div class='form-text-wrap'>
