バリデーションエラーの日本語化

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -82,9 +82,9 @@
    <div class="form-group">
      <div class='form-text-wrap'>
        <label class="form-text">価格</label>
-       <span class="indispensable">(必須)</span>
+       <span class="indispensable">(任意)</span>
      </div>
-     <%= f.text_area :price, class:"input-default", id:"price", placeholder:"例) 1000", maxlength:"40" %>
+     <%= f.text_area :price, class:"input-default", id:"price", placeholder:"販売される方は金額を入力してください   例)1000", maxlength:"40" %>
    </div>
 
     <div class="new-submit">
