マイページの実装(店舗とユーザー)

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -4,11 +4,16 @@
 
 .post-box{
   padding-left: 180px;
-  padding: 50px 0 100px 180px;
+  padding: 50px 0 60px 180px;
 }
 
 .post-title{
   display: flex;
+}
+
+.post-list1{
+  text-align: center;
+  padding-bottom: 60px;
 }
 
 .detail-table{
@@ -88,7 +93,7 @@
 }
 .detail-value4{
   border: 1px solid gray;
-  padding-bottom: 208px;
+  padding-bottom: 170px;
   padding-left: 10px;
   padding-top: 10px;     
 }
@@ -121,7 +126,6 @@
 
 .comment{
   margin: 0 auto;
-  background-color: whitesmoke;
   width: 1300px;
   margin-bottom: 60px;
 }
@@ -144,4 +148,47 @@
 .input-default-comment{
   height: 120px;
   width: 1000px;
+}
+
+
+.store-box{
+  text-align: center;
+}
+
+
+.store-balance{
+  width: 100%;
+  
+}
+.store-item{
+  border: 1px solid gray;
+  width: 300px;
+  height: 8vh;
+  text-align: center;
+  background-color: whitesmoke;
+}
+
+.store-value{
+  border: 1px solid gray;
+  width: 1000px;
+  padding-left: 40px;
+}
+
+.store-item1{
+  border: 1px solid gray;
+  width: 150px;
+  height: 8vh;
+  text-align: center;
+  background-color: whitesmoke;
+}
+
+.store-value1{
+  border: 1px solid gray;
+  width: 600px;
+  text-align: center;
+}
+
+.edit-btn{
+  text-align: center;
+  padding-bottom: 120px;
 }
