--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -47,3 +47,9 @@
   text-align: center;
   padding:50px 0 30px 0;
 }
+
+.mypage-btn{
+  color: gainsboro;
+  padding-right: 30px;
+  text-decoration: none;
+}
