--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,214 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.79.0">
+    <title>Album example · Bootstrap v5.0</title>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <!-- Bootstrap core CSS -->
+   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    
+ <%= render 'posts/header' %>
+
+ 
+<div class="main">
+<div class="container-main">
+ <%= form_with model: @user, url: user_registration_path ,method: :PATCH,  class: 'registration-main', local: true do |f| %>
+
+ <div class='form-wrap'>
+   <div class='form-header'>
+     <h3 class='form-header-text'>
+      会員情報編集
+     </h3>
+   </div>
+
+  <%= render  'share/error_messages', model: f.object %>
+  
+   <div class="form-group">
+     <div class='form-text-wrap'>
+       <label class="form-text">ニックネーム</label>
+       <span class="indispensable">(必須)</span>
+     </div>
+     <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) tanaka123", maxlength:"40" %>
+   </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">メールアドレス</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">現在のパスワード</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <%= f.password_field :current_password, class:"input-default", id:"current_password", placeholder:"新しいパスワードを入力" %>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">新しいパスワード</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
+    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">新しいパスワード(確認)</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力" %>
+  </div>
+  <div class="form-group">
+    <p class='form-info-header'>
+      本人確認
+    </p>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">お名前(全角)</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <div class='input-name-wrap'>
+      <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 田中" %>
+      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 太郎" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">電話番号</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <%= f.text_area :telephone, class:"input-default", id:"telephone", placeholder:"12345678910" %>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">生年月日</label>
+      <span class="indispensable">(必須)</span>
+    </div>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
+   <% if @user.person_id == 3 %>
+   <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">業種</label>
+        <span class="indispensable">(必須)</span>
+      </div>
+      <%= f.collection_select(:industry_id, Industry.all, :id, :name, {},{class:"input-default", id:"industry_id"}) %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">このアプリを知ったきっかけ</label>
+        <span class="indispensable">(必須)</span>
+      </div>
+      <%= f.collection_select(:reason_id, Reason.all, :id, :name, {}, {class:"input-default", id:"reason_id"}) %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">パーソン</label>
+        <span class="indispensable">(必須)</span>
+      </div>
+      <%= f.collection_select(:person_id, Person.all, :id, :name, {}, {class:"input-default", id:"person_id"}) %>
+    </div>
+    <div class="form-group">
+      <p class='form-info-header'>
+      店舗情報（店舗経営の方は入力）
+      </p>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">業態</label>
+      </div>
+      <%= f.collection_select(:business_id, Business.all, :id, :name, {}, {class:"input-default", id:"business_id"}) %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">店舗名</label>
+      </div>
+      <%= f.text_area :store_name, class:"input-default", id:"store_name", placeholder:"例）店名  〇〇店" %>
+    </div>
+     <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">店舗画像</label>
+        <span class="indispensable">クリックしてアップロード（必須）</span>
+      </div>
+      <%= f.file_field :image, id:"store-image" %>
+   </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">都道府県</label>
+      </div>
+      <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {}, {class:"input-default", id:"prefecture_id"}) %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+         <label class="form-text">エリア</label>
+      </div>
+      <%= f.text_area :area, class:"input-area", id:"area", placeholder:"例）港区赤坂2-11-7" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">営業時間</label>
+      </div>
+      <%= f.text_area :opening_hours, class:"input-default", id:"opening_hours", placeholder:"例）9:00~20:00" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">アピールポイント</label>
+      </div>
+      <%= f.text_area :store_appeal, class:"input-appeal", id:"store_appeal", placeholder:"例）店のアピールポイントなど" %>
+    </div>
     <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+   <div class="submit">
+   <div class='d-grid gap-2'>
+     <%= f.submit "変更する" ,class:"btn btn-primary" %>
+   </div>
+   </div>
+ </div>
+ <% end %>
+</div>
+</div>
+<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<div class="footer-sign-in">
+</div>
+      
+  </body>
+</html>
