--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,14 +7,9 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.79.0">
     <title>Album example · Bootstrap v5.0</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -23,20 +18,16 @@
         -moz-user-select: none;
         user-select: none;
       }
-
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
     </style>
-
-    
   </head>
-  <body>
-    
- <%= render "header" %>
 
+<body>
+ <%= render "header" %>
 <main>
   <div class="top-image">
   <section class="py-5 text-center container">
@@ -85,14 +76,13 @@
                    <%= link_to "SOLD OUT" , root_path, class:"btn btn-sm btn-outline-secondary" %>
                   <% end %>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted"><%= time_ago_in_words( l post.created_at) %>前</small>
               </div>
             </div>
           </div>
         </div>
         <% end %>
      </div>
-
        <h3 class="store-lists">店舗一覧</h3>
        <div class="store-list">
          <% @users.each do |user| %>
@@ -108,17 +98,15 @@
              
             </div>
             <div class="col-auto d-none d-lg-block">
-            <div>
-            <%= image_tag user.image.variant(resize: '400x300'), class: "user-img" %>
-            </div>
-
+             <div>
+               <%= image_tag user.image.variant(resize: '400x300'), class: "user-img" %>
+             </div>
             </div>
          </div>
          <% end %>
          <% end %>
        </div>
    </div>
-
 </main>
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
@@ -138,11 +126,8 @@
       <li><a class="text-secondary">TEL:0123-45-6789</a></li>
       <li><a class="text-secondary">FAX:0123-45-6789</a></li>
     </ul>
-
   </div>
 </div>
-
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
   </body>
 </html>
