--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,14 +7,9 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.79.0">
     <title>Album example · Bootstrap v5.0</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -23,26 +18,21 @@
         -moz-user-select: none;
         user-select: none;
       }
-
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
     </style>
-
-    
   </head>
-  <body>
-    
- <%= render "header" %>
 
+<body>
+ <%= render "header" %>
 <main>
   <div class="top-image">
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-       
          <h1 class="text-white">商品詳細</h1>
         <div class="text-space">
         <a class="lead text-white">気になることがあればコメントをしましょう</a>
@@ -51,9 +41,7 @@
     </div>
   </section>
   </div>
-
-
- <div class="post-box">
+  <div class="post-box">
     <table class="detail-table">
       <tbody class="detail-balance">
         <tr>
@@ -83,6 +71,10 @@
           <td class="detail-value6"><%= @post.user.nickname %></td>
         </tr>
         <tr>
+          <th class="detail-item8">投稿日時</th>
+          <td class="detail-value8"><%= l @post.created_at %></td>
+        </tr>
+        <tr>
           <% if @post.price.present? %>
           <th class="detail-item7">価格</th>
           <td class="detail-value7"><%= @post.price %>円</td>
@@ -90,9 +82,9 @@
         </tr>
       </tbody>
     </table>
- </div>
+  </div>
 
- <div class="post-btn">
+  <div class="post-btn">
    <% if user_signed_in? && current_user.id == @post.user_id %>
    <div class="edit-btn">
      <%= link_to "編集する" , edit_post_path(@post.id), class:"btn btn-success btn-lg" %>
@@ -102,20 +94,20 @@
    </div>
    <% end %>
    <% if @post.price.present?%>
-    <% unless user_signed_in? && current_user.id == @post.user_id %>
-      <% unless @post.record.present?%>
-       <div class="sell-btn">
-         <%= link_to "購入する" , post_records_path(@post.id), class:"btn btn-danger btn-lg" %>
-       </div>
-      <% else %>
-       <div class="sell-btn">
-       <button type="button" class="btn btn-light btn-lg">SOLD OUT</button>
-       </div>
-      <% end %>
-    <% end %>
+     <% unless user_signed_in? && current_user.id == @post.user_id %>
+       <% unless @post.record.present?%>
+        <div class="sell-btn">
+           <%= link_to "購入する" , post_records_path(@post.id), class:"btn btn-danger btn-lg" %>
+        </div>
+       <% else %>
+        <div class="sell-btn">
+         <button type="button" class="btn btn-light btn-lg">SOLD OUT</button>
+        </div>
+       <% end %>
+     <% end %>
    <% end %>
    <%= link_to "戻る", root_path, class:"btn btn-secondary btn-lg" %>
- </div>
+  </div>
 
  <div class="comment">
    <div class="comment-view" id= "comments">
@@ -141,11 +133,10 @@
      <% end %>
     </div>
   </div>
-
 </main>
 
-<div class="navbar navbar-dark bg-dark shadow-sm">
-  <div class="container">
+ <div class="navbar navbar-dark bg-dark shadow-sm">
+   <div class="container">
      <div class="footer-bar">
        <p class="navbar-brand d-flex align-items-center">
         <strong>About</strong>
@@ -154,18 +145,15 @@
          <a class="text-muted">PromoAppとは、お買い得情報満載のプロショップと職人様を繋ぎ合わせるアプリです。</a>
        </a>
      </div>
-     <ul class="list-unstyled">
-      <h5 class="text-white">Contact</h5>
-      <li><a class="text-secondary">田中 敦嗣</a></li>
-      <li><a class="text-secondary">Email:atsushi19890825@gmail.com</a></li>
-      <li><a class="text-secondary">TEL:0123-45-6789</a></li>
-      <li><a class="text-secondary">FAX:0123-45-6789</a></li>
-    </ul>
-
-  </div>
-</div>
-
+      <ul class="list-unstyled">
+       <h5 class="text-white">Contact</h5>
+       <li><a class="text-secondary">田中 敦嗣</a></li>
+       <li><a class="text-secondary">Email:atsushi19890825@gmail.com</a></li>
+       <li><a class="text-secondary">TEL:0123-45-6789</a></li>
+       <li><a class="text-secondary">FAX:0123-45-6789</a></li>
+      </ul>
+   </div>
+ </div>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
   </body>
 </html>
