--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -23,26 +19,21 @@
         -moz-user-select: none;
         user-select: none;
       }
-
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
     </style>
-
-    
   </head>
-  <body>
-    
- <%= render "posts/header" %>
 
+<body>
+ <%= render "posts/header" %>
 <main>
   <div class="top-image">
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-       
          <h1 class="text-white">詳細ページ</h1>
         <div class="text-space">
         <a class="lead text-white"></a>
@@ -51,8 +42,6 @@
     </div>
   </section>
   </div>
-
- 
   <div class="album py-5 bg-light">
   <% if @user.person_id == 3 %>
    <h3 class="store-box"><%= @user.store_name %>の店舗詳細</h3>
@@ -93,10 +82,9 @@
    </div>
    <% if user_signed_in? && current_user.id == @user.id%>
    <div class="edit-btn">
-     <%= link_to "編集する" , '#', class:"btn btn-success btn-lg" %>
+     <%= link_to "編集する" , edit_user_registration_path(@user.id), class:"btn btn-success btn-lg" %>
    </div>
    <% end %>
-
     <h3 class="post-list1"><%= @user.store_name %>の投稿一覧</h3>
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -128,7 +116,8 @@
         <% end %>
      </div>
     <% else %>
-     <h3 class="store-box"><%= @user.nickname %>さんの詳細ページ</h3>
+
+   <h3 class="store-box"><%= @user.nickname %>さんの詳細ページ</h3>
    <div class="post-box">
     <table class="store-table">
       <tbody class="store-balance">
@@ -172,7 +161,7 @@
    </div>
    <% if user_signed_in? && current_user.id == @user.id%>
    <div class="edit-btn">
-     <%= link_to "編集する","#" , class:"btn btn-success btn-lg" %>
+     <%= link_to "編集する", edit_user_registration_path(@user.id) , class:"btn btn-success btn-lg" %>
    </div>
    <% end %>
     
@@ -210,16 +199,7 @@
      <% end %>
     <% end %>
    </div>
- 
-
-
- 
-
- 
-
 </main>
-
-
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
   <div class="container">
@@ -238,11 +218,8 @@
       <li><a class="text-secondary">TEL:0123-45-6789</a></li>
       <li><a class="text-secondary">FAX:0123-45-6789</a></li>
     </ul>
-
   </div>
 </div>
-
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
   </body>
 </html>
