header/footer部分テンプレート実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,34 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-  </head>
-
-<body>
+  
  <%= render "header" %>
-<main>
+ 
+ <main>
   <div class="top-image">
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
@@ -133,27 +108,8 @@
      <% end %>
     </div>
   </div>
-</main>
+ </main>
 
- <div class="navbar navbar-dark bg-dark shadow-sm">
-   <div class="container">
-     <div class="footer-bar">
-       <p class="navbar-brand d-flex align-items-center">
-        <strong>About</strong>
-       </p>
-       <a href="#" class="navbar-brand d-flex align-items-center">
-         <a class="text-muted">PromoAppとは、お買い得情報満載のプロショップと職人様を繋ぎ合わせるアプリです。</a>
-       </a>
-     </div>
-      <ul class="list-unstyled">
-       <h5 class="text-white">Contact</h5>
-       <li><a class="text-secondary">田中 敦嗣</a></li>
-       <li><a class="text-secondary">Email:atsushi19890825@gmail.com</a></li>
-       <li><a class="text-secondary">TEL:0123-45-6789</a></li>
-       <li><a class="text-secondary">FAX:0123-45-6789</a></li>
-      </ul>
-   </div>
- </div>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+ <%= render 'footer' %>
+
 </html>
