--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    
  <%= render 'posts/header' %>
 
- 
-<div class="main">
-<div class="container-main">
- <%= form_with model: @user, url: user_registration_path ,method: :PATCH,  class: 'registration-main', local: true do |f| %>
+ <div class="main">
+ <div class="container-main">
+   <%= form_with model: @user, url: user_registration_path ,method: :PATCH,  class: 'registration-main', local: true do |f| %>
+  <div class='form-wrap'>
+    <div class='form-header'>
+      <h3 class='form-header-text'>
+        会員情報編集
+      </h3>
+    </div>
 
- <div class='form-wrap'>
-   <div class='form-header'>
-     <h3 class='form-header-text'>
-      会員情報編集
-     </h3>
-   </div>
-
-  <%= render  'share/error_messages', model: f.object %>
+   <%= render  'share/error_messages', model: f.object %>
   
    <div class="form-group">
      <div class='form-text-wrap'>
@@ -55,19 +22,19 @@
      </div>
      <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) tanaka123", maxlength:"40" %>
    </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス</label>
-      <span class="indispensable">(必須)</span>
-    </div>
-    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
-  </div>
+   <div class="form-group">
+     <div class='form-text-wrap'>
+       <label class="form-text">メールアドレス</label>
+       <span class="indispensable">(必須)</span>
+     </div>
+     <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">現在のパスワード</label>
       <span class="indispensable">(必須)</span>
     </div>
-    <%= f.password_field :current_password, class:"input-default", id:"current_password", placeholder:"新しいパスワードを入力" %>
+    <%= f.password_field :current_password, class:"input-default", id:"current_password", placeholder:"現在のパスワードを入力" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -196,19 +163,18 @@
     </div>
     <% end %>
 
-   <div class="submit">
-   <div class='d-grid gap-2'>
-     <%= f.submit "変更する" ,class:"btn btn-primary" %>
+    <div class="submit">
+     <div class='d-grid gap-2'>
+       <%= f.submit "変更する" ,class:"btn btn-primary" %>
+     </div>
+    </div>
    </div>
-   </div>
+   <% end %>
+  </div>
  </div>
- <% end %>
-</div>
-</div>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+ <div class="footer-sign-in">
+ </div>
 
-<div class="footer-sign-in">
-</div>
-      
-  </body>
+  <%= render 'posts/footer' %>
+  
 </html>
