--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,64 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
+  
+  <%= render 'posts/header' %>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
+ <div class="main">
+  <div class="container-main">
+   <%= form_with model: @user, url: user_registration_path ,method: :POST,  class: 'registration-main', local: true do |f| %>
 
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+   <div class='form-wrap'>
+     <div class='form-header'>
+       <h3 class='form-header-text'>
+         会員情報入力
+       </h3>
+     </div>
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    
-  </head>
-  <body>
-  <header>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container">
-      <%= link_to "PromoApp", root_path, class:"navbar-brand d-flex align-items-center" %>
-      <div>
-       <%= link_to "ログイン", new_user_session_path, class:"btn btn-secondary my-2" %>
-       <%= link_to "新規登録", new_user_registration_path, class:"btn btn-primary my-2" %>
-      </div>
-    </div>
-  </div>
-</header>
-
- 
-<div class="main">
-<div class="container-main">
- <%= form_with model: @user, url: user_registration_path ,method: :POST,  class: 'registration-main', local: true do |f| %>
-
- <div class='form-wrap'>
-   <div class='form-header'>
-     <h3 class='form-header-text'>
-      会員情報入力
-     </h3>
-   </div>
-
-  <%= render  'share/error_messages', model: f.object %>
+     <%= render  'share/error_messages', model: f.object %>
   
    <div class="form-group">
      <div class='form-text-wrap'>
@@ -204,14 +160,13 @@
      <%= f.submit "会員登録" ,class:"btn btn-primary" %>
    </div>
    </div>
+  </div>
+  <% end %>
+  </div>
  </div>
- <% end %>
-</div>
-</div>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+ <div class="footer-sign-in">
+ </div>
 
-<div class="footer-sign-in">
-</div>
-      
-  </body>
+  <%= render 'posts/footer' %>
+
 </html>
