--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,41 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-
-    <!-- Bootstrap core CSS -->
-   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-
-    
 <%= render "posts/header" %>
 
- 
 <div class="main">
    <div class='form-header'>
      <h3 class='form-header-text'>
@@ -175,14 +142,13 @@
          <%= link_to "戻る", root_path, class:"btn btn-secondary" %>
       </div>
     </div>
- </div>
- <% end %>
-</div>
-</div>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-<div class="footer-sign-in">
-</div>
+   </div>
+    <% end %>
+   </div>
+  </div>
+  <div class="footer-sign-in">
+  </div>
       
-  </body>
+  <%= render 'posts/footer' %>
+  
 </html>
