投稿と販売を分けて一覧表示

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -197,6 +197,13 @@
   text-align: center;
 }
 
+.edit-reverse-btn{
+  display: flex;
+  justify-content: center;
+}
 .edit-btn{
-  text-align: center;
+  padding-right: 20px;
+}
+.reverse-btn{
+  padding-left: 20px;
 }
