--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -166,6 +166,7 @@
     <div class="submit">
      <div class='d-grid gap-2'>
        <%= f.submit "変更する" ,class:"btn btn-primary" %>
+       <%= link_to "戻る", user_path(@user.id), class:"btn btn-secondary" %>
      </div>
     </div>
    </div>
