--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -60,7 +60,7 @@
       </div>
     <div class="edit-submit">
       <div class='d-grid gap-2'>
-         <%= link_to "戻る", root_path, class:"btn btn-secondary" %>
+         <%= link_to "戻る", post_path(@post.id), class:"btn btn-secondary" %>
       </div>
     </div>
    </div>
