--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,34 +30,71 @@
   <div class="album py-5 bg-light">
     <h3 class="post-list">投稿一覧</h3>
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <% @posts.each do |post| %>
-        <div class="col">
-          <div class="card shadow-sm">
-            <%= link_to post_path(post.id) do %>
-            <div>
-            <%= image_tag post.image, class: "item-img" %>
+       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+         <% @posts.each do |post| %>
+         <% unless post.price.present? %>
+         <div class="col">
+           <div class="card shadow-sm">
+             <%= link_to post_path(post.id) do %>
+             <div>
+                <%= image_tag post.image, class: "item-img" %>
+             </div>
+             <% end %>
+               <div class="card-body">
+                 <p class="card-title"><%= post.title %></p>
+                 <p class="card-text"><%= truncate(post.text,length:39) %></p>
+                 <div class="d-flex justify-content-between align-items-center">
+                   <div class="btn-group">
+                      <%= link_to "More" , post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
+                     <% if user_signed_in? && current_user.id == post.user_id %>
+                      <%= link_to "Edit" , edit_post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
+                     <% elsif  post.record.present? %>
+                      <%= link_to "SOLD OUT" , root_path, class:"btn btn-sm btn-outline-secondary" %>
+                     <% end %>
+                   </div>
+                   <small class="text-muted"><%= time_ago_in_words( l post.created_at) %>前</small>
+                 </div>
+               </div>
             </div>
-            <% end %>
-            <div class="card-body">
-              <p class="card-title"><%= post.title %></p>
-              <p class="card-text"><%= truncate(post.text,length:39) %></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                   <%= link_to "View" , post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
-                  <% if user_signed_in? && current_user.id == post.user_id %>
-                   <%= link_to "Edit" , edit_post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
-                  <% elsif  post.record.present? %>
-                   <%= link_to "SOLD OUT" , root_path, class:"btn btn-sm btn-outline-secondary" %>
-                  <% end %>
-                </div>
-                <small class="text-muted"><%= time_ago_in_words( l post.created_at) %>前</small>
-              </div>
+         </div>
+         <% end %>
+         <% end %>
+       </div>
+    </div>
+  </div>
+  <div class="album py-5 bg-light">
+    <h3 class="post-list">販売商品一覧</h3>
+    <div class="container">
+       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+         <% @posts.each do |post| %>
+         <% if post.price.present? %>
+         <div class="col">
+           <div class="card shadow-sm">
+             <%= link_to post_path(post.id) do %>
+             <div>
+                <%= image_tag post.image, class: "item-img" %>
+             </div>
+             <% end %>
+               <div class="card-body">
+                 <p class="card-title"><%= post.title %></p>
+                 <p class="card-text"><%= truncate(post.text,length:39) %></p>
+                 <div class="d-flex justify-content-between align-items-center">
+                   <div class="btn-group">
+                      <%= link_to "More" , post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
+                     <% if user_signed_in? && current_user.id == post.user_id %>
+                      <%= link_to "Edit" , edit_post_path(post.id), class:"btn btn-sm btn-outline-secondary" %>
+                     <% elsif  post.record.present? %>
+                      <%= link_to "SOLD OUT" , root_path, class:"btn btn-sm btn-outline-secondary" %>
+                     <% end %>
+                   </div>
+                   <small class="text-muted"><%= time_ago_in_words( l post.created_at) %>前</small>
+                 </div>
+               </div>
             </div>
-          </div>
-        </div>
-        <% end %>
-     </div>
+         </div>
+         <% end %>
+         <% end %>
+       </div>
        <h3 class="store-lists">店舗一覧</h3>
        <div class="store-list">
          <% @users.each do |user| %>
@@ -66,22 +103,23 @@
             <div class="col p-4 d-flex flex-column position-static">
              <strong class="d-inline-block mb-2 text-primary"><%= user.business.name %></strong>
              <h3 class="mb-0"><%= user.store_name %></h3>
-             <div class="mb-1 text-muted"><%= user.prefecture.name %></div>
-             <p><%= user.area %></p>
-             <p><%= user.store_appeal %></p>
-             <%= link_to "more", user_path(user.id)%>
-             
+              <div class="mb-1 text-muted"><%= user.prefecture.name %></div>
+                <p><%= user.area %></p>
+                <p><%= user.store_appeal %></p>
+                <%= link_to "more", user_path(user.id)%>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+               <div>
+                 <%= image_tag user.image.variant(resize: '400x300'), class: "user-img" %>
+               </div>
+              </div>
             </div>
-            <div class="col-auto d-none d-lg-block">
-             <div>
-               <%= image_tag user.image.variant(resize: '400x300'), class: "user-img" %>
-             </div>
-            </div>
-         </div>
+          </div>
          <% end %>
          <% end %>
        </div>
-   </div>
+    </div>
+  </div>
  </main>
 
   <%=  render 'footer' %>
