--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,9 +55,14 @@
     </table>
    </div>
    <% if user_signed_in? && current_user.id == @user.id%>
-   <div class="edit-btn">
-     <%= link_to "編集する" , edit_user_registration_path(@user.id), class:"btn btn-success btn-lg" %>
-   </div>
+    <div class="edit-reverse-btn">
+      <div class="edit-btn">
+       <%= link_to "編集する" , edit_user_registration_path(@user.id), class:"btn btn-success btn-lg" %>
+      </div>
+      <div class="reverse-btn">
+         <%= link_to "戻る", root_path, class:"btn btn-secondary btn-lg" %>
+      </div>
+    </div>
    <% end %>
     <h3 class="post-list1"><%= @user.store_name %>の投稿一覧</h3>
     <div class="container">
@@ -134,9 +139,14 @@
     </table>
    </div>
    <% if user_signed_in? && current_user.id == @user.id%>
-   <div class="edit-btn">
-     <%= link_to "編集する", edit_user_registration_path(@user.id) , class:"btn btn-success btn-lg" %>
-   </div>
+     <div class="edit-reverse-btn">
+       <div class="edit-btn">
+          <%= link_to "編集する" , edit_user_registration_path(@user.id), class:"btn btn-success btn-lg" %>
+       </div>
+       <div class="reverse-btn">
+          <%= link_to "戻る", root_path, class:"btn btn-secondary btn-lg" %>
+       </div>
+     </div>
    <% end %>
     
     <% if @user.posts.present? %>
