退会機能実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,14 +9,14 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
        <% if user_signed_in? %>
-         <h1 class="text-white">PromoAppへようこそ</h1>
+         <h1 class="text-white">PromoTOOLへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
         <a class="lead text-white">さあ、投稿しましょう</a>
          <p class="post-btn">
           <%= link_to "投稿する", new_post_path, class:"btn btn-success" %>
         </p>
        <% else %>
-        <h1 class="text-white">PromoAppへようこそ</h1>
+        <h1 class="text-white">PromoTOOLへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
         <a class="lead text-white">さあ、はじめましょう</a>
         <p class="post-bt">
