--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -134,7 +134,7 @@
 
     <div class="new-submit">
       <div class='d-grid gap-2'>
-        <%= f.submit "購入する" ,class:"btn btn-danger",id: 'submit-btn' %>
+        <%= f.submit "購入する" ,data: {confirm: "購入しますか?"}, class:"btn btn-danger",id: 'submit-btn' %>
       </div>
     </div>
     <div class="new-submit">
